--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1"
   },
